--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "d3-geo": "^3.1.1",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.27.1"
