--- a/package.json
+++ b/package.json
@@ -15,16 +15,23 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
+    "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
+    "d3-geo-projection": "^4.0.0",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-globe.gl": "^2.27.2",
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-maps": "^3.0.0",
-    "react-tooltip": "^5.27.1"
+    "react-tooltip": "^5.27.1",
+    "three": "^0.166.1",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
